# volatility-prediction

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  async_test.py  pyproject.toml  requirements.txt  stats.json
.github/workflows/: ci.yaml
conf/base/: catalog.yml  parameters_data_collection.yml  parameters_data_combination.yml  parameters_data_science.yml  parameters_feature_engineering.yml
data/01_raw/: master_list.csv
notebooks/: data-exploration.ipynb
notebooks/.ipynb_checkpoints/: data-exploration-checkpoint.ipynb
src/frontend/: README.md  runner.py  utils.py  utils.py.py  websocket.py
src/tests/pipelines/data_collection/: test_pipeline.py
src/volatility-prediction-model/: __init__.py  settings.py
src/volatility-prediction-model/pipelines/data_collection/: nodes.py  pipeline.py
src/volatility-prediction-model/pipelines/data_combination/: __init__.py  nodes.py  pipeline.py
src/volatility-prediction-model/pipelines/data_science/: nodes.py
src/volatility-prediction-model/pipelines/feature_engineering/: __init__.py  nodes.py
src/volatility_prediction_model/: __main__.py  pipeline_registry.py
src/volatility_prediction_model/pipelines/data_collection/: README.md  __init__.py  nodes.py  pipeline.py
src/volatility_prediction_model/pipelines/data_combination/: README.md  nodes.py  pipeline.py
src/volatility_prediction_model/pipelines/data_science/: README.md  nodes.py  pipeline.py  (+1 more)
tests/pipelines/data_combination/: test_pipeline.py
tests/pipelines/feature_engineering/: test_pipeline.py
(+8 files in other folders)
